# ssz-trajectories

./: .gitignore  LICENSE  README.md  expand_ch33.py  gen_ch33_plots.py  pyproject.toml
examples/: nonradial_deflection.py  plot_xi_profile.py  radial_null_outgoing.py
reports/: TEST_REPORT.md  test_results.xml
src/ssz_trajectories/: __init__.py  analysis.py  constants.py  embedding.py  integrator.py  xi.py
tests/: test_analysis.py  test_embedding.py  test_integrator.py  test_xi.py
